--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h4>Entspannt in der Kurve liegen</h4>
                     </div>
                     <div class="flex-section">
-                        <div class="content-second">
+                        <div class="content-first-data">
 
                             <ul>
                                 <li>
@@ -77,13 +77,62 @@
                                 </li>
 
                             </ul>
+                            <div class="content-btn">
+                                <a class="btn btn-first" href="">Zu den Tarifen</a>
+                                <a class="btn btn-second" target="_blank" href="">Jetzt Tarif berechnen</a>
+                            </div>
                         </div>
                         <div class="content-first-image">
-                            <object  type="image/svg+xml" data="images/animation/Crew.svg"></object>
+                            <object type="image/svg+xml" data="images/animation/Crew.svg"></object>
                         </div>
                     </div>
                 </div>
-
+                <div class="content-second" id="">
+                    <div class="content-second-wrap">
+                        <p>1 von 8 </p>
+                        <h3>Mit freiem Kopf Gas geben </h3>
+                        <p class="big-p">Wie, erfahren Sie in den nächsten vier Minuten </p>
+                        <p> Mit der HDI Motorradversicherung steuern Sie Ihre Maschine unbeschwert über die schönsten
+                            Straßen
+                            Deutschlands. Weil Sie wissen, dass Sie für alle Fälle gewappnet sind. </p>
+                    </div>
+                    <div class="features-content">
+                        <div class="feature">
+                            <img src="images/images/Icon_Unfall_sorgenfrei.svg" alt="">
+                            <h4> Für den Fall des Unfalls sorgenfrei</h4>
+                            <p>
+                                Es kracht – alle 12 Sekunden auf Deutschlands Straßen. Schützen Sie Sich davor und vor
+                                vielem mehr.
+                                <span class="text-bold"> 95 % zufriedene HDI-Kunden </span> sprechen für sich. Wir
+                                sorgen uns um Sie
+                                und Ihr Motorrad.
+                            </p>
+                        </div>
+                        <div class="feature">
+                            <img src="images/images/Icon_Werkstattservice.svg" alt="">
+                            <h4> In Windeseile zurück auf die Straße
+                            </h4>
+                            <p>
+                                Dank HDI sind Sie in jedem Fall schnell wieder mobil. Unser <span
+                                    class="text-bold">Schadenservice</span> lässt technische Defekte an Ihrer Maschine
+                                im Handumdrehen
+                                und kompetent beheben.
+                            </p>
+                        </div>
+                        <div class="feature">
+                            <img src="images/images/Icon_Flexibel.svg" alt="">
+                            <h4> So flexibel wie Ihr Fahrstil
+                            </h4>
+                            <p>
+                                Die HDI Motorradversicherung sichert Sie so ab, wie es zu Ihnen passt. Mit <span
+                                    class="text-bold">flexiblen Tarifen</span> und allen Gefahren im Blick. Damit Sie
+                                unbeschwert den
+                                Fahrtwind genießen können.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
