--- a/index.html
+++ b/index.html
@@ -132,7 +132,83 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="content-third">
+                    <div class="flex-section">
+                        <div class="content-third-data">
+                            <p class="title">2 von 8</p>
+                            <h4>Wenn Tiere Ihren Weg kreuzen</h4>
+                            <p class="big-p">
+                                <span class="text-bold"> Lena Fuchs</span> genießt es, auf ihrem Zweirad durch die Welt
+                                zu fahren.
+                                Meist beträgt ihr Bremsweg dabei kaum mehr als 50 Meter. Doch auch das ist manchmal
+                                nicht genug! Heute
+                                kreuzt ein Reh Lenas Weg, Ausweichen unmöglich. Zum Glück bleibt sie unversehrt.
+                            </p>
+                            <p>
+                                <span class="text-bold"> Doppeltes Glück:</span> Um Bergung und Reparatur ihres
+                                Motorrads
+                                und alle Formalia der Wildkollision kümmert sich die Motorradversicherung der HDI.
+                            </p>
+                            <div class="">
+                                <a href="" target="_blank" class="btn btn-third">Jetzt Tarif berechnen</a>
+                            </div>
+                        </div>
+                        <div id="" class="content-third-image">
+                            <object type="image/svg+xml" data="images/animation/Wildunfall.svg"></object>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-forth">
+                    <div class="flex-section">
+                      <div id="" class="content-forth-image">
+                        <object type="image/svg+xml" id="" data="images/animation/Abkommen_Fahrbahn.svg"></object>
+                      </div>
+                      <div class="content-forth-data">
+                        <h4>Wenn Laub zur Panne führt </h4>
+                        <p class="big-p">Wälder, Autobahnen, Hochstraßen – <span class="taxt-bold">Peter Baum </span> legt sich
+                          gerne in immer
+                          neue Kurven. Heute ist er mal wieder zügig unterwegs. Da passiert es: Laubansammlungen verstecken
+                          Steine und andere Hindernisse! Und schon kommt Peter von der Fahrbahn ab.
+                          Zum Glück passiert ihm nichts.
+                        </p>
+                        <p>
+                          Um die <span class="text-bold"> Bergung seiner defekten Maschine </span> und seinen <span
+                            class="text-bold"> Transport nach Hause </span> kümmert sich außerdem die Motorradversicherung von
+                          HDI – noch einmal gutgegangen, Peter!
+                        </p>
+                        <div class="sm-center">
+                          <a href="" target="_blank"
+                            class="btn btn-third">Jetzt Tarif berechnen</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="content-fifth">
+                    <div class="flex-section">
+                      <div class="content-fifth-data">
+                        <h4>Mal wieder ausgebremst</h4>
+                        <p class="big-p">
+                          Heute mal wieder richtig Gas geben! <span class="text-bold">Luca Schnell</span> plant einen
+                          wunderbaren Sonntagsausflug. Doch schon
+                          bei der Ortsausfahrt erlebt er sein blaues Wunder. Ein Auto trödelt Richtung Ortsausfahrt, als ein
+                          weiteres Fahrzeug unerwartet von der Seite auftaucht. Der Pkw vor Luca legt eine Vollbremsung ein –
+                          <br>krach, Auffahrunfall!
+                        </p>
+                        <p>
+                          Zu seinem Glück ist Luca bei der HDI versichert.
+                          <span class="text-bold"> Alle entstandenen Kosten werden ihm ersetzt </span> und schon bald kann er –
+                          diesmal etwas geduldiger – neue Wege erkunden.
+                        </p>
+                        <div class="">
+                          <a href="" target="_blank"
+                            class="btn btn-third">Jetzt Tarif berechnen</a>
+                        </div>
+                      </div>
+                      <div id="" class="content-fifth-image">
+                        <object type="image/svg+xml" data="images/animation/Auffahrunfall.svg"></object>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </section>
     </main>
