--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/style.css">
@@ -160,56 +159,150 @@
                 </div>
                 <div class="content-forth">
                     <div class="flex-section">
-                      <div id="" class="content-forth-image">
-                        <object type="image/svg+xml" id="" data="images/animation/Abkommen_Fahrbahn.svg"></object>
-                      </div>
-                      <div class="content-forth-data">
-                        <h4>Wenn Laub zur Panne führt </h4>
-                        <p class="big-p">Wälder, Autobahnen, Hochstraßen – <span class="taxt-bold">Peter Baum </span> legt sich
-                          gerne in immer
-                          neue Kurven. Heute ist er mal wieder zügig unterwegs. Da passiert es: Laubansammlungen verstecken
-                          Steine und andere Hindernisse! Und schon kommt Peter von der Fahrbahn ab.
-                          Zum Glück passiert ihm nichts.
-                        </p>
-                        <p>
-                          Um die <span class="text-bold"> Bergung seiner defekten Maschine </span> und seinen <span
-                            class="text-bold"> Transport nach Hause </span> kümmert sich außerdem die Motorradversicherung von
-                          HDI – noch einmal gutgegangen, Peter!
-                        </p>
-                        <div class="sm-center">
-                          <a href="" target="_blank"
-                            class="btn btn-third">Jetzt Tarif berechnen</a>
+                        <div id="" class="content-forth-image">
+                            <object type="image/svg+xml" id="" data="images/animation/Abkommen_Fahrbahn.svg"></object>
                         </div>
-                      </div>
+                        <div class="content-forth-data">
+                            <h4>Wenn Laub zur Panne führt </h4>
+                            <p class="big-p">Wälder, Autobahnen, Hochstraßen – <span class="taxt-bold">Peter Baum
+                                </span> legt sich
+                                gerne in immer
+                                neue Kurven. Heute ist er mal wieder zügig unterwegs. Da passiert es: Laubansammlungen
+                                verstecken
+                                Steine und andere Hindernisse! Und schon kommt Peter von der Fahrbahn ab.
+                                Zum Glück passiert ihm nichts.
+                            </p>
+                            <p>
+                                Um die <span class="text-bold"> Bergung seiner defekten Maschine </span> und seinen
+                                <span class="text-bold"> Transport nach Hause </span> kümmert sich außerdem die
+                                Motorradversicherung von
+                                HDI – noch einmal gutgegangen, Peter!
+                            </p>
+                            <div class="sm-center">
+                                <a href="" target="_blank" class="btn btn-third">Jetzt Tarif berechnen</a>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="content-fifth">
+                </div>
+                <div class="content-fifth">
                     <div class="flex-section">
-                      <div class="content-fifth-data">
-                        <h4>Mal wieder ausgebremst</h4>
-                        <p class="big-p">
-                          Heute mal wieder richtig Gas geben! <span class="text-bold">Luca Schnell</span> plant einen
-                          wunderbaren Sonntagsausflug. Doch schon
-                          bei der Ortsausfahrt erlebt er sein blaues Wunder. Ein Auto trödelt Richtung Ortsausfahrt, als ein
-                          weiteres Fahrzeug unerwartet von der Seite auftaucht. Der Pkw vor Luca legt eine Vollbremsung ein –
-                          <br>krach, Auffahrunfall!
-                        </p>
-                        <p>
-                          Zu seinem Glück ist Luca bei der HDI versichert.
-                          <span class="text-bold"> Alle entstandenen Kosten werden ihm ersetzt </span> und schon bald kann er –
-                          diesmal etwas geduldiger – neue Wege erkunden.
-                        </p>
-                        <div class="">
-                          <a href="" target="_blank"
-                            class="btn btn-third">Jetzt Tarif berechnen</a>
+                        <div class="content-fifth-data">
+                            <h4>Mal wieder ausgebremst</h4>
+                            <p class="big-p">
+                                Heute mal wieder richtig Gas geben! <span class="text-bold">Luca Schnell</span> plant
+                                einen
+                                wunderbaren Sonntagsausflug. Doch schon
+                                bei der Ortsausfahrt erlebt er sein blaues Wunder. Ein Auto trödelt Richtung
+                                Ortsausfahrt, als ein
+                                weiteres Fahrzeug unerwartet von der Seite auftaucht. Der Pkw vor Luca legt eine
+                                Vollbremsung ein –
+                                <br>krach, Auffahrunfall!
+                            </p>
+                            <p>
+                                Zu seinem Glück ist Luca bei der HDI versichert.
+                                <span class="text-bold"> Alle entstandenen Kosten werden ihm ersetzt </span> und schon
+                                bald kann er –
+                                diesmal etwas geduldiger – neue Wege erkunden.
+                            </p>
+                            <div class="">
+                                <a href="" target="_blank" class="btn btn-third">Jetzt Tarif berechnen</a>
+                            </div>
                         </div>
-                      </div>
-                      <div id="" class="content-fifth-image">
-                        <object type="image/svg+xml" data="images/animation/Auffahrunfall.svg"></object>
-                      </div>
+                        <div id="" class="content-fifth-image">
+                            <object type="image/svg+xml" data="images/animation/Auffahrunfall.svg"></object>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
+        </section>
+        <section class="online-section">
+            <div class="content">
+                <div class="online-section-header" id="">
+                    <p class="head">3 von 8</p>
+                    <h3 class="">online In fünf Minuten<br>zur eVB-Nummer </h3>
+                    <p>Sichern Sie sich ab und führen Ihre Maschine guten Gewissens aus</p>
+                </div>
+                <div class="online-section-data">
+                    <div class="show-data">
+                        <div class="wrapper">
+                            <div class="online-data">
+                                <ul class="flex-section flex-item">
+                                    <li class="online-image1"><img src="images/HDI_LP_KFZ_Prozess_Icons-03.svg" alt="">
+                                    </li>
+                                    <li class="number-data">1.</li>
+                                    <li class="text-data">Tarif online anpassen <br>und berechnen</li>
+                                </ul>
+                            </div>
+                            <div class="online-data">
+                                <ul class="flex-section flex-item">
+                                    <li class="online-image2"><img src="images/HDI_LP_KFZ_Prozess_Icons-01.svg" alt="">
+                                    </li>
+                                    <li class="number-data">2.</li>
+                                    <li class="text-data">Vertrag online abschließen <br>und absichern</li>
+                                </ul>
+                            </div>
+                            <div class="wrapper-data align-items-end d-flex">
+                                <ul class="flex-section flex-item">
+                                    <li class="online-image3"><img src="images/HDI_LP_KFZ_Prozess_Icons-02.svg" alt="">
+                                    </li>
+                                    <li class="number-data">3.</li>
+                                    <li class="text-data">Vertrag im HDI Online- <br>Kundenportal managen</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="insurance-section">
+            <div class="content">
+                <div class="insurance-detail">
+                    <div class="insurance-head" id="unseretarife">
+                        <p>4 von 8</p>
+                        <h3>
+                            Die richtige ABsicherung für <br> sie und ihr Motorrad
+                        </h3>
+                        <p>Passen Sie Ihren HDI-Tarif individuell an Ihre Situation an</p>
+                    </div>
+                    <div class="insurance-detail-wrapper">
+                        <div class="insurence-detail-head">
+                            <div class="insurence-detail-data"></div>
+                            <div class="insurence-detail-data margin-data cl-orange">
+                                <div class="text-center">
+                                    <div class="flex-section flex-item-end">
+                                        <div class="img-data">
+                                            <img src="images/images/tarife_motor_premium.svg" class="image-part-img"
+                                                alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="bg-white">
+                                        <h3 class="insurence-detail-heading first-heading heading-font">
+                                            Motor Komfort
+                                            <span style="display:block;" class="sub-font">Umfangreiche Absicherung</span>
+                                        </h3>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="insurence-detail-data cl-green">
+                                <div class="text-center">
+                                    <div class="flex-section flex-item-end">
+                                        <div class="img-data">
+                                            <img src="images/images/tarife_motor_komfort.svg" class="image-part-img"
+                                                alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="bg-white">
+                                        <h3 class="insurence-detail-heading  heading-font">
+                                            Motor Premium
+                                            <span style="display:block;" class="sub-font">Umfassender
+                                                Premium-Schutz</span>
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
 </body>
