--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                 <div class="text-center">
                                     <div class="flex-section flex-item-end">
                                         <div class="img-data">
-                                            <img src="images/images/tarife_motor_premium.svg" class="image-part-img"
+                                            <img src="images/images/tarife_motor_premium.svg" class=""
                                                 alt="" />
                                         </div>
                                     </div>
@@ -436,7 +436,7 @@
                                 <div class="text-center">
                                     <div class="flex-section flex-item-end">
                                         <div class="img-data">
-                                            <img src="images/images/tarife_motor_komfort.svg" class="image-part-img"
+                                            <img src="images/images/tarife_motor_komfort.svg" class=""
                                                 alt="" />
                                         </div>
                                     </div>
@@ -487,14 +487,14 @@
                     <div class="insurance-content">
                         <div class="insurance-slider none-lg-1024 main-data m-top">
                             <div class="owl-carousel owl-theme" id="insurance-carousel">
-                                <div class="plan" data-id="item2">
+                                <div class="plan">
                                     <div class="insurence-detail-data margin-data1 cl-orange">
 
                                         <div class="text-center">
                                             <div class="flex-section flex-item-end image-part-height">
                                                 <div class="img-data">
                                                     <img src="images/images/tarife_motor_premium.svg"
-                                                        class="image-part-img" alt="" />
+                                                        class="" alt="" />
                                                 </div>
                                             </div>
                                             <div class="bg-white">
@@ -535,13 +535,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="plan" data-id="item3">
+                                <div class="plan">
                                     <div class="insurence-detail-data cl-green">
                                         <div class="text-center">
                                             <div class="flex-section flex-item-end image-part-height">
-                                                <div class="image-data">
+                                                <div class="img-data">
                                                     <img src="images/images/tarife_motor_premium.svg"
-                                                        class="image-part-img" alt="" />
+                                                        class="" alt="" />
                                                 </div>
                                             </div>
                                             <div class="bg-white">
@@ -1069,7 +1069,7 @@
                                 <div class="change-img">
                                     <ul>
                                         <li><img src="images/images/Franke_Bornberg_Motor_Premium.png" alt=""
-                                                class="aword-third-img"></li>
+                                                class=""></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1502,7 +1502,7 @@
             if (panel.style.maxHeight) {
                 panel.style.maxHeight = null;
             } else {
-                panel.style.maxHeight = panel.scrollHeight + "px";
+                panel.style.maxHeight = "480px";
             }
         });
     }
